--- a/themes/Silk/layout/_widgets/post/articleSection.ejs
+++ b/themes/Silk/layout/_widgets/post/articleSection.ejs
@@ -57,6 +57,7 @@
       <!-- 文章正文 -->
       <article
         class="prose prose-lg max-w-none mb-16 bg-white rounded-xl p-8 shadow-md markdown-body"
+        id="article-content"
       >
         <%- page.content %>
       </article>
