--- a/themes/Silk/source/css/github.markdown.css
+++ b/themes/Silk/source/css/github.markdown.css
@@ -693,6 +693,11 @@
   border: 1px solid var(--borderColor-default);
 }
 
+.markdown-body .highlight table td {
+  border: none;
+  padding: inherit;
+}
+
 .markdown-body table td>:last-child {
   margin-bottom: 0;
 }
@@ -866,9 +871,17 @@
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  color: var(--fgColor-default);
-  background-color: var(--bgColor-muted);
-  border-radius: 6px;
+  color: #d6dade;
+  background-color: #171819;
+  border-radius: 0px;
+}
+.markdown-body .gutter pre {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
+.markdown-body .code pre {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 
 .markdown-body pre code,
