fix: 修复详情主内容和信息模块重叠问题、序列样式问题、代码模块格式问题

--- a/themes/Silk/layout/_widgets/post/articleSection.ejs
+++ b/themes/Silk/layout/_widgets/post/articleSection.ejs
@@ -2,7 +2,7 @@
  * @Author: zhangfu 18072150332@163.com
  * @Date: 2025-07-18 12:41:07
  * @LastEditors: zhangfu 18072150332@163.com
- * @LastEditTime: 2025-10-26 19:30:19
+ * @LastEditTime: 2025-11-19 23:32:09
 -->
 <section class="pt-32 pt-16 bg-white">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
@@ -93,7 +93,7 @@
 
       <!-- 作者信息 -->
       <div
-        class="bg-gradient-to-r from-primary/10 to-secondary/10 rounded-xl p-6"
+        class="bg-gradient-to-r from-primary/10 to-secondary/10 rounded-xl p-6 mt-8"
       >
         <div class="flex items-center">
           <img
